tests/compile-fail/integration_suite__integration__type_check__stackless__jump_predec_float.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:28:13
   │
28 │         if (--F0) goto label;
   │             ^^^^ a float
   │
   = an integer is required


